compiler/testData/diagnostics/testsWithJsStdLib/name/inlineClassReservedProperies.kt
// !LANGUAGE: +InlineClasses

inline class A(val <!RESERVED_MEMBER_INSIDE_INLINE_CLASS!>unbox<!>: Int)